Fixed some input align stuff

--- a/Software-Engineering-Project/Software-Engineering-Project/wwwroot/css/AddStudentStyle.css
+++ b/Software-Engineering-Project/Software-Engineering-Project/wwwroot/css/AddStudentStyle.css
@@ -57,7 +57,7 @@ form {
 
 .form-group {
     max-width: 400px;
-    width: 90%;
+    width: 100%;
     height: 45px;
     background-color: #f0f0f0;
     margin: 7px 0;
