--- a/Software-Engineering-Project/Software-Engineering-Project/wwwroot/css/login_style.css
+++ b/Software-Engineering-Project/Software-Engineering-Project/wwwroot/css/login_style.css
@@ -82,7 +82,7 @@ form {
     background: none;
     outline: none;
     border: none;
-    line-height: 1;
+    line-height: 1px;
     font-weight: 600;
     font-size: 1.1rem;
     width: 80%;
